<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"

            app:toolbarId="@+id/toolbar">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="0dp"></androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"


        app:layout_anchorGravity="center"
        android:layout_height="match_parent"
        app:layout_anchor="@+id/nestedScrollView"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            tools:context=".MainActivity"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textSize="30sp"
                android:id="@+id/tituloTV"
                android:layout_marginTop="90dp"
                android:text="@string/titulo_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:ems="10"
                android:layout_width="318dp"
                android:layout_height="53dp"
                android:id="@+id/clientInput"
                android:hint="@string/cliente"
                android:layout_marginTop="60dp"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tituloTV" />

            <EditText
                android:ems="10"
                android:layout_width="318dp"
                android:layout_height="53dp"
                android:layout_marginTop="15dp"
                android:id="@+id/seguimentoInput"
                android:hint="@string/seguimento"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/clientInput" />

            <TextView
                android:textSize="18sp"
                android:id="@+id/ratingTV"
                android:text="@string/rating"
                android:layout_marginTop="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.125"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seguimentoInput" />

            <EditText
                android:ems="10"
                android:inputType="number"
                android:id="@+id/notaInput"
                android:layout_width="78dp"
                android:layout_height="55dp"
                android:textAlignment="center"
                android:hint="@string/_0_a_10"
                android:layout_marginTop="24dp"
                android:layout_marginStart="15dp"
                android:importantForAutofill="no"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.064"
                app:layout_constraintStart_toEndOf="@+id/ratingTV"
                app:layout_constraintTop_toBottomOf="@+id/seguimentoInput" />

            <TextView
                android:textSize="18sp"
                android:id="@+id/cupomTV"
                android:layout_marginTop="36dp"
                android:text="@string/aceita_cupom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ratingTV" />

            <Switch
                tools:checked="false"
                android:checked="false"
                android:text="@string/nao"
                android:id="@+id/switchBT"
                android:textColor="#AFAFAF"
                android:textOn="@string/nao"
                android:textOff="@string/sim"
                android:layout_marginTop="100dp"
                android:layout_marginStart="32dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.021"
                app:layout_constraintStart_toEndOf="@+id/cupomTV"
                app:layout_constraintTop_toBottomOf="@+id/seguimentoInput"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <Button
                android:id="@+id/saveBT"
                android:onClick="onClick"
                android:text="@string/btSalvar"
                android:layout_marginTop="48dp"
                android:drawableTint="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_lapis"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.173"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cupomTV" />

            <Button
                android:onClick="onClick"
                android:id="@+id/searchBT"
                android:layout_marginTop="48dp"
                android:text="@string/btVisualizar"
                android:drawableTint="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:drawableLeft="@drawable/ic_procurar"
                app:layout_constraintHorizontal_bias="0.832"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cupomTV" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_margin="16dp"
        android:layout_gravity="bottom|end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:src="@android:drawable/ic_input_add" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>